# ===================================================================
# pyproject.toml for KIANA
# ===================================================================

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "kiana" 
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas>=2.2.3",
    "matplotlib",
    "scipy",
    "dtw-python<=1.5.3",
]
requires-python = ">=3.8"

authors = [
  { name="ZHOU Chenghao", email="jnjnnjzch@gmail.com" },
]
maintainers = [
    { name="ZHOU Chenghao", email="jnjnnjzch@gmail.com" },
]
description = "Kiana Is A Neural Aligner. A toolkit for synchronizing, integrating, and analyzing heterogeneous neuroscience data (ephys, behaviors, etc.)."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = ["neuroscience", "alignment", "neural data"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
# 明确告诉 setuptools 只打包 'kiana' 这个目录
packages = ["kiana"]
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[project.urls]
Homepage = "https://github.com/jnjnnjzch/kiana_aligner"
"Bug Tracker" = "https://github.com/jnjnnjzch/kiana_aligner/issues"